--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "body-parser": "^1.19.0",
     "cookie-session": "^1.3.3",
     "ejs": "^2.6.2",
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "request-ip": "^2.1.3"
   },
   "devDependencies": {
     "chai": "^4.2.0",
