--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "cookie-session": "^1.3.3",
     "ejs": "^2.6.2",
     "express": "^4.17.1",
+    "method-override": "^3.0.0",
     "request-ip": "^2.1.3"
   },
   "devDependencies": {
